Count a member another mixin adds when judging a @Shadow of it
The load report listed moreculling's BlockModelRenderState_fabricCullMixin
as a possible problem on every client boot: "missing @Shadow field
BlockModelRenderState.mesh". No merged class has mesh; fabric-renderer-
api-v1's own BlockModelRenderStateMixin adds it as a @Unique field, and
moreculling's shadow binds to it, on Fabric and here.

MixinFit now asks what the mixins Mixin applies to the same target first
have added. Order is part of the answer, as Mixin applies them: lowest
priority first, then the order the mixins were created in (configs by
their own priority, then as registered; within a config its mixins
array before the side's). A mixin applied after the shadowing one does
not count. moreculling is priority 1200 and fabric-renderer 1000. Fields
and plain methods count, @Unique ones included; injector handlers and
lambdas do not, since Mixin renames them. The registered config list
now keeps its registration order, as its javadoc always said it did.
-Dforbric.mixinFit.addedMembers=off judges the merged class alone.

Census over the sweep90 and popular client sets (3342 mixins): only
moreculling's mixin changes verdict, PARTIAL to FIT. The other half of
the report-precision finding, fabric-events-interaction's pick-block
mixin, already reads FIT since e1a3193a asks the WrapOperation shim.

Players see one fewer false entry under possible problems.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>